syntax = "proto3";
package ecommerce;

import "common.proto";

service ProductService {
  rpc getProduct(GetProductRequest) returns (ecommerce.common.Product);
}

message GetProductRequest {
  string product_id = 1;
}
