syntax = "proto3";
package ecommerce;

import "common.proto";

service UserService {
  rpc getUser(GetUserRequest) returns (ecommerce.common.User);
}

message GetUserRequest {
  string user_id = 1;
}
